# scripture_phaser

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  VERSION  dev.requirements.txt  elm.json  pyproject.toml  requirements.txt  sm  test  test.py
doc/: scripture_phaser.tape
scripture_phaser/: agents.py  api.py  attempt.py  cli.py  database.py  enums.py  exceptions.py  models.py  passage.py  recital.py  stats.py  translations.py  tui.py  verse.py
scripture_phaser/backend/: __init__.py  agents.py  api.py  cli.py  enums.py  exceptions.py  models.py  passage.py  recitation.py  reference.py  scripture_phaser.py  scripture_phaser_old.py  stats.py  translations.py  user.py
scripture_phaser/frontend/: Authentication.elm  Main.elm  Reference.elm
scripture_phaser/test/: __init__.py  test_agents.py  test_api.py  test_attempt.py  test_passage.py  test_verse.py
src/: __init__.py  agents.py  api.py  cli.py  enums.py  exceptions.py  models.py  passage.py  reference.py  scripture_phaser.py  stats.py  translations.py  verse.py
test/: __init__.py  test.py  test_agents.py  test_api.py  test_attempt.py  test_base.py  test_passage.py  test_reference.py  test_user.py  test_verse.py
