[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripture_phaser"]

[tool.mypy]

[tool.ruff]
line-length = 86

[project]
name = "scripture_phaser"
version = "1.2.1"
dependencies = [
	"peewee==3.17.0",
	"fastapi[standard]==0.115.5",
]
requires-python = ">=3.8"
authors = [
  { name="Nolan McMahon", email="nolan@nolanmcmahon.net" },
]
description = "scripture_phaser helps you to memorize the Bible."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["bible", "bible-study", "scripture", "memorization", "cli", "christianity", "recitation", "bible-memorization"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Religion",
	"License :: OSI Approved :: BSD License",
	"Natural Language :: English",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: MacOS",
	"Operating System :: Unix",
	"Programming Language :: Python",
	"Topic :: Religion"
]

[project.scripts]
scripture_phaser = "src.scripture_phaser:scripture_phaser"

[project.urls]
Homepage = "https://nolanmcmahon.net/projects/scripture_phaser.html"
Repository = "https://github.com/NolantheNerd/scripture_phaser"
